# iac-forge

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: CANDIDATE_LOOP.md  METACIRCULAR.md  ML_VISION.md  PATTERNS.md  SUBSTRATE_VISION.md
docs/rfcs/: 0001-type-mapper-trait.md
src/: backend.rs  error.rs  fleet.rs  goast.rs  hex.rs  ir.rs  lib.rs  morphism.rs  naming.rs  nix.rs  nix_backend.rs  nix_transform.rs  pipeline.rs  policy.rs  remediation.rs  render_cache.rs  resolve.rs  sdk_naming.rs  sexpr.rs  sexpr_diff.rs  sexpr_ir.rs  spec.rs  sui_transform.rs  testing.rs  transform.rs  type_map.rs
src/testing/: fixtures.rs  mod.rs
tests/: cross_lang_vectors.rs  cross_language.rs  morphism_laws.rs  nix_cross_language.rs  nix_fod_build.rs  remediation_laws.rs  reversibility_lemma.rs  sexpr_round_trip.rs  transform_properties.rs
tests/cross_lang/: sexpr.nix  sexpr_ref.rb
