[package]
name = "iac-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Platform-independent infrastructure-as-code generator from OpenAPI specs"
homepage = "https://github.com/pleme-io/iac-forge"
repository = "https://github.com/pleme-io/iac-forge"
documentation = "https://docs.rs/iac-forge"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "code-generators"]
keywords = ["iac", "codegen", "openapi", "terraform", "pulumi"]

[lints.clippy]
pedantic = "warn"

[features]
default = []
# Rust-level sui (pure-Rust Nix) integration — evaluates Nix transforms
# in-process rather than shelling out. Pulls in the full sui-eval crate.
# Named sui-eval (not just "sui") to avoid ambiguity with the sui package
# in cargo's --features resolution.
sui-eval = ["dep:sui-eval"]

[dependencies]
blake3 = "1.8"
meimei = { git = "https://github.com/pleme-io/meimei" }
openapi-forge = { git = "https://github.com/pleme-io/openapi-forge" }
takumi = { git = "https://github.com/pleme-io/takumi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sui-eval = { git = "https://github.com/pleme-io/sui", optional = true }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
